[gd_scene load_steps=7 format=3 uid="uid://xbs27udpp45r"]

[ext_resource type="Script" path="res://Enemies/enemy.gd" id="1_rftp3"]
[ext_resource type="PackedScene" uid="uid://drslwr6bxr7ar" path="res://Player/xp.tscn" id="2_2e4xc"]
[ext_resource type="Texture2D" uid="uid://byj8mu7dbva5p" path="res://Assets/sheet_characters_cropped.png" id="3_qh2et"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oc5eu"]
atlas = ExtResource("3_qh2et")
region = Rect2(63, 125, 21, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_pqutl"]
radius = 5.12605

[sub_resource type="CircleShape2D" id="CircleShape2D_ys54s"]
radius = 28.0179

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_rftp3")
max_hitpoints = 30
xp_scene = ExtResource("2_2e4xc")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.772549, 0, 0, 1)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_oc5eu")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
scale = Vector2(11.9278, 11.4354)
shape = SubResource("CircleShape2D_pqutl")

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ys54s")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
